# reddit-

./: .gitignore  README.md  RUN_DIRECT_REDDIT.md  pyproject.toml  requirements.txt
exports/场景1_工作与生产力/: keywords.json  run_meta.json  state.json
exports/场景2_运动与体能训练/: keywords.json  run_meta.json  state.json
exports/场景3_睡眠与恢复/: keywords.json  run_meta.json  state.json
exports/场景4_心理健康与情绪/: keywords.json  run_meta.json  state.json
exports/场景5_特殊职业_夜班工作/: keywords.json  run_meta.json  state.json
exports/场景6_慢性病或健康问题管理/: keywords.json  run_meta.json  state.json
exports/日常生活与全天能量维持/: analysis_cache_report.json  analysis_cache_taxonomy.json  keywords.json  run_meta.json  state.json
scripts/: build_scene_insights_pdf.py  crawl_reddit_scene.py  run_6_scenes_schemeA.py  run_one_scene_preset.py
src/reddit_scene_crawler/: __init__.py  config.py  keyword_decomposer.py  models.py  reddit_crawler.py  scene_store.py
